<resources>
    <string name="app_name">Fit Target</string>

    <string name="button_finishWorkout">Finish</string>
    <string name="volume">Volume</string>
    <string name="sets">Sets</string>
    <string name="duration">Duration</string>
    <string name="addExercisePrompt">Get started by adding an exercise</string>
    <string name="addExercise">+ Add Exercise</string>

    <string-array name="measurement_preferences">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Disabled</item>
    </string-array>
    <!-- Muscle group options for the Spinner -->
    <string-array name="muscle_groups">
        <item>Legs</item>
        <item>Arms</item>
        <item>Shoulder</item>
        <item>Back</item>
        <item>Chest</item>
    </string-array>
</resources>

